--- a/css/index.css
+++ b/css/index.css
@@ -126,3 +126,11 @@
     color:#FF5D12;
     font-weight: bold;
 }
+.specialslides .arrow{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    margin-top:26%;
+    background-color:#FF5D12;
+    border-radius: 50%;
+}
