--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@
     margin-top: 2%;
 }
 #specialslides .card{
-    background-color: #E4E8EB;
+    background-color: rgba(228, 232, 235, 0.3);
 }
 .specialslides .card img{
     height: 100%;
@@ -133,6 +133,14 @@
     color: #FF5D12;
     font-weight: bolder;
     font-family: 'Archivo Black', sans-serif;
+}
+.menugallery .card{
+    border-radius: 20px;
+    border: none;
+    background-color:rgba(224, 224, 224, 0.2);
+}
+.menugallery .card img{
+    border-radius: 20px;
 }
 .menugallery button a{
     text-decoration: none;
