--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,12 @@
 .logo:hover{
     color: white;
 }
+.logo img{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
 .logo p{
     font-size: 12px;
     font-weight: 100;
@@ -217,4 +223,33 @@
 }
 .slides-for-you .card a{
     text-decoration: none;
+}
+footer{
+    margin-top: 25%;
+    width: 100%;
+    height: 100px;
+    background-color:#D2DDE5;
+}
+.footer{
+    padding-top: 20px;
+    margin-left: 20%;
+}
+.footer .logo{
+    color: #FF5D12;
+    font-size: 30px;
+    font-family: 'Archivo Black', sans-serif;
+    font-weight: 400;
+    cursor: default;
+}
+.footer .about a{
+    font-size: 30px;
+    color: #522209;
+    font-family: 'Archivo Black', sans-serif;
+    font-weight: 400;
+    text-decoration: none;
+}
+.footer .copyright{
+    font-size: 14px;
+    color: #522209;
+    padding-top: 15px;
 }
