--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
 .navbar{
     background-color:#FF5D12;
     width: 100%;
@@ -224,7 +227,7 @@
 .slides-for-you .card a{
     text-decoration: none;
 }
-footer{
+.page-footer{
     margin-top: 25%;
     width: 100%;
     height: 100px;
