--- a/css/meat-favourites.css
+++ b/css/meat-favourites.css
@@ -60,7 +60,7 @@ body{
     font-family: 'Archivo Black', sans-serif;
 }
 .specialheader{
-    background:linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("../images/special.jpeg");
+    background:linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("../images/meatpizzas.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
