--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@ body{
     width: 150px;
     height: 50px;
 }
-.specialslides button a{
+.specialslides a button{
     font-size: 16px;
     text-align: center;
     color: white;
@@ -226,6 +226,27 @@ body{
 }
 .slides-for-you .card a{
     text-decoration: none;
+}
+.cart{
+    float: right;
+    position: fixed;
+    margin-left: 84%;
+    margin-top: 37%;
+    padding-top: 10px;
+    padding-right: 50px;
+    font-size: 20px;
+    color: white;
+}
+.cart a button{
+    width: 200px;
+    height: 50px;
+    background-color: #FF5D12;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+}
+.cart span{
+    font-size: 23px;
 }
 .page-footer{
     margin-top: 25%;
