--- a/css/veggiepizzas.css
+++ b/css/veggiepizzas.css
@@ -110,7 +110,7 @@ body{
     box-shadow: #FF5D12;
     border-radius: 20px;
 }
-.special-column .card button a{
+.special-column .card  a button{
     text-decoration: none;
     font-size: 15px;
     text-align: center;
