--- a/css/veggiepizzas.css
+++ b/css/veggiepizzas.css
@@ -124,6 +124,27 @@ body{
     height: 100px;
     background-color:#D2DDE5;
 }
+.cart{
+    float: right;
+    position: fixed;
+    margin-left: 84%;
+    margin-top: 37%;
+    padding-top: 10px;
+    padding-right: 50px;
+    font-size: 20px;
+    color: white;
+}
+.cart a button{
+    width: 200px;
+    height: 50px;
+    background-color: #FF5D12;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+}
+.cart span{
+    font-size: 23px;
+}
 .footer{
     padding-top: 20px;
     margin-left: 20%;
