--- a/css/happyfamily.css
+++ b/css/happyfamily.css
@@ -100,7 +100,7 @@ body{
     font-family: 'Archivo Black', sans-serif;
     color: #522209;
 }
-.specialheader2 a button{
+.specialheader2 button{
     background-color: #FF5D12;
     width: 150px;
     height: 40px;
