--- a/css/veggiepizzas.css
+++ b/css/veggiepizzas.css
@@ -123,12 +123,6 @@ body{
     background-color:#D2DDE5;
 }
 .cart{
-    float: right;
-    position: fixed;
-    margin-left: 84%;
-    margin-top: 37%;
-    padding-top: 10px;
-    padding-right: 50px;
     font-size: 20px;
     color: white;
 }
@@ -139,9 +133,11 @@ body{
     border: none;
     outline: none;
     border-radius: 10px;
+    color: white;
 }
 .cart span{
-    font-size: 23px;
+    font-size: 20px;
+    color: white;
 }
 .footer{
     padding-top: 20px;
