--- a/css/crust.css
+++ b/css/crust.css
@@ -104,13 +104,11 @@ body{
     background-color: #FF5D12;
     width: 150px;
     height: 40px;
-    margin-bottom: 3%;
+    margin-top: 10%;
     outline: none;
     border: none;
     box-shadow: #FF5D12;
     border-radius: 20px;
-}
-.special-column .card a button{
     text-decoration: none;
     font-size: 15px;
     text-align: center;
