--- a/css/cart.css
+++ b/css/cart.css
@@ -49,17 +49,13 @@ body{
     width: 40px;
     height: 40px;
 }
-.offer{
-    padding-right:600px;
-    padding-top: 10px;
-}
 .offer a{
     color: white;
     font-size: 18px;
     font-family: 'Archivo Black', sans-serif;
 }
-.cart{
-    font-size: 20px;
+.cart i{
+    font-size: 37px;
     color: white;
 }
 .cart a button{
@@ -70,15 +66,24 @@ body{
     outline: none;
     border-radius: 10px;
     color: white;
+    position: relative;
 }
 .cart span{
-    font-size: 20px;
+    font-size: 14px;
     color: white;
+    position: absolute;
+    right: 75px;
+    background-color: #606060;
+    padding: 0 3px;
+    border-radius: 20%;
+
 }
 .product-container{
     margin-top: 6%;
 }
-
+.product-container table th{
+    color: #FF5D12;
+}
 .page-footer{
     margin-top: 42%;
     width: 100%;
