--- a/css/coupleup.css
+++ b/css/coupleup.css
@@ -50,10 +50,6 @@ body{
     width: 40px;
     height: 40px;
 }
-.offer{
-    padding-right:600px;
-    padding-top: 10px;
-}
 .offer a{
     color: white;
     font-size: 18px;
@@ -162,8 +158,8 @@ body{
     height: 100px;
     background-color:#D2DDE5;
 }
-.cart{
-    font-size: 20px;
+.cart i{
+    font-size: 37px;
     color: white;
 }
 .cart a button{
@@ -174,10 +170,17 @@ body{
     outline: none;
     border-radius: 10px;
     color: white;
+    position: relative;
 }
 .cart span{
-    font-size: 20px;
+    font-size: 14px;
     color: white;
+    position: absolute;
+    right: 75px;
+    background-color: #606060;
+    padding: 0 3px;
+    border-radius: 20%;
+
 }
 .footer{
     padding-top: 20px;
