--- a/css/happyfamily.css
+++ b/css/happyfamily.css
@@ -50,9 +50,10 @@ body{
     width: 40px;
     height: 40px;
 }
-.offer{
-    padding-right:600px;
-    padding-top: 10px;
+.offer a{
+    color: white;
+    font-size: 18px;
+    font-family: 'Archivo Black', sans-serif;
 }
 .specialheader{
     background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/happyfamilia.jpg");
