--- a/css/veggiedine.css
+++ b/css/veggiedine.css
@@ -50,6 +50,10 @@ body{
     width: 40px;
     height: 40px;
 }
+.offer{
+    padding-right:600px;
+    padding-top: 10px;
+}
 .offer a{
     color: white;
     font-size: 18px;
