--- a/css/crust.css
+++ b/css/crust.css
@@ -95,12 +95,11 @@ body{
     color:#522209;
     font-weight: bold;
 }
-.special-column .card button{
-    float: right;
+.special-column button{
     background-color: #FF5D12;
     width: 150px;
     height: 40px;
-    margin-top: 10%;
+    margin-bottom: 3%;
     outline: none;
     border: none;
     box-shadow: #FF5D12;
