--- a/css/veggiepizzas.css
+++ b/css/veggiepizzas.css
@@ -102,8 +102,7 @@ body{
     color:#522209;
     font-weight: bold;
 }
-.special-column .card button, .pizza-choice button{
-    float: right;
+.special-column button{
     background-color: #FF5D12;
     width: 150px;
     height: 40px;
@@ -118,12 +117,6 @@ body{
     color: white;
     font-family: cursive;
     font-weight: 500;
-}
-.page-footer{
-    margin-top: 5%;
-    width: 100%;
-    height: 100px;
-    background-color:#D2DDE5;
 }
 .cart i{
     font-size: 37px;
